# Pytron

./: README.md
CI_Data/: CMakeLists.txt  main.c  test
CI_Data/HW1/: InsertionSort.h  MergeSort.h  bubbleSort.h  helloworld.h  multiby2.h
Network/Client/: Client1.py  Client2.py
Network/Server/: server.py
Network/Server/message/: messagehandler.py
pygame/: python.py
src/Server/: Lobby_Client_Gui.py  lobbygui.py  server.py
src/Server/message/: __init__.py  messagehandler.py
